Decoracion header y body

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,5 @@
-$black: #181818;
-$gray_light: #eee;
-$gray_medium: #ddd;
-$gray_medium2: #adadad;
+$black: #2f3542;
+$gray_light: #a4b0be;
+$gray_medium: #57606f;
 $gray_dark: #555;
 
