--- a/src/styles/imports.scss
+++ b/src/styles/imports.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Zilla+Slab:300,300i,400,400i,500,500i,600,600i,700,700i|Lato:300,300i,400,400i,700,700i,900,900i|Fjalla+One');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900');
