Change color, fonts y compon

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,7 +2,7 @@ body {
   background-color: #f9f9f9;
 }
 p {
-  font-family: 'Work Sans', sans-serif !important;
+  font-family: 'Rubik', sans-serif !important;
   font-size: 13px;
   line-height: 24px;
   color: #444444;
@@ -33,7 +33,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Work Sans', sans-serif !important; 
+  font-family: 'Rubik', sans-serif !important; 
 }
 blockquote {
   padding: 10px 20px;
