--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,7 @@
 $black: #2f3542;
 $gray_light: #a4b0be;
-$gray_medium: #57606f;
-$gray_dark: #555;
-
+$gray_medium: #747d8c;
+$gray_dark: #57606f;
+$write_gray_1: #f1f2f6;
+$write_gray_2: #dfe4ea;
+$write_gray_3: #ced6e0;
