--- a/src/components/NewPost/NewPost.scss
+++ b/src/components/NewPost/NewPost.scss
@@ -14,6 +14,18 @@
       outline: none !important;
     }
   }
+  .btnAdd {
+    display: block;
+    width: 100%;
+    background-color: $black;
+    color: $write_gray_1;
+    border: none;
+    padding: 6px;
+    cursor: pointer;
+    &:hover {
+      background-color: $gray_dark;
+    }
+  }
 }
 :global {
   .form-group {
