Decoracion text capitalize

--- a/src/components/FullPost/FullPost.scss
+++ b/src/components/FullPost/FullPost.scss
@@ -2,8 +2,16 @@
   border: 2px solid #2f3542;
   padding: 10px;
   position: relative;
+  h3 {
+    &:first-letter {
+      text-transform: capitalize
+    }
+  }
   p {
     margin-bottom: 0;
+    &:first-letter {
+      text-transform: capitalize
+    }
     &.Autor {
       background-color: $write_gray_3;
       display: inline-block;
