--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -21,6 +21,7 @@ p, h1, h2, h3, h4, h5, h6, a, span {
 }
 a {
   text-decoration: none !important;
+  font-family: 'Rubik', sans-serif !important;
 }
 button {
   &:active,
