--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -22,6 +22,17 @@ p, h1, h2, h3, h4, h5, h6, a, span {
 a {
   text-decoration: none !important;
   font-family: 'Rubik', sans-serif !important;
+  p,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  a,
+  span {
+    color: $black;
+  }
 }
 button {
   &:active,
