--- a/src/components/FullPost/FullPost.scss
+++ b/src/components/FullPost/FullPost.scss
@@ -2,6 +2,7 @@
   border: 2px solid #2f3542;
   padding: 10px;
   position: relative;
+  margin-bottom: 20px;
   h3 {
     &:first-letter {
       text-transform: capitalize
@@ -35,4 +36,10 @@
       color: #ff4757;
     }
   }
+}
+.btnVolver {
+  background: $black;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
 }
